做了一些通知页面的东西

--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
       <h1>nihaoa</h1>
     </template> -->
     <script src="lib/vue.js" charset="utf-8"></script>
-    <script src="lib/vue-router.js" charset="utf-8"></script>
+    <!-- <script src="lib/vue-router.js" charset="utf-8"></script> -->
     <script src="lib/jquery.js" charset="utf-8"></script>
     <script src="lib/bootstrap.js" charset="utf-8"></script>
     <script src="js/login.js" charset="utf-8"></script>
